# bootcamp-data-eng

./: README.md  pyproject.toml
aula_01/: README.md  aula_01.py  desafio.py  exercicio_02.py
aula_01/exercicios/: exercicio_01.py
aula_02/: README.md  aula_02.py  desafio.py  exercicio_02.py  exercicio_03.py  exercicio_04.py  exercicio_06.py  exercicio_07.py  exercicio_09.py  exercicio_11.py  exercicio_14.py  exercicio_21.py  exercicio_22.py  exercicio_23.py  exercicio_24.py  exercicio_25.py
aula_02/exercicios/: exercicio_01.py  exercicio_05.py  exercicio_08.py  exercicio_10.py  exercicio_12.py  exercicio_13.py  exercicio_15.py  exercicio_16.py  exercicio_17.py  exercicio_18.py  (+2 more)
aula_03/: README.md  aula_03.py  desafio.py  exercicio_01.py  exercicio_02.py  exercicio_04.py  exercicio_05.py  exercicio_07.py  exercicio_08.py  exercicio_09.py  exercicio_10.py  exercicio_11.py  exercicio_13.py
aula_04/: README.md  aula_04.py  desafio.py
aula_05/: README.md
aula_06/: README.md
aula_07/: README.md  aula_07.py
aula_08/: README.md  etl.py
aula_09/: README.md  aula_09.py  etl.py  log_utils.py  pipeline.py  schema.py
aula_10/: README.md
aula_11/: README.md
aula_12/: README.md  exemplo.csv  sol_poo.py  sol_prog_funcional.py  uso_sol_poo.py
aula_13_14/: README.md
aula_15/: README.md
aula_16/: README.md  aula_16.py
aula_17/: README.md  aula_17.py  desafio.py
aula_18/: README.md  exemplo_01.py  exemplo_02.py
aula_19/: Dockerfile  README.md
aula_19/api_crud/: database.py  main.py  models.py  pyproject.toml  schemas.py
aulas_13_14/: README.md
(+74 files in other folders)
