[tool.poetry]
package-mode = false
name = "bootcamp-data-eng"
description = "Repositório de arquivos das aulas do Bootcamp de Python, SQL e Git para Engenharia de Dados do Luciano Galvão."
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pandera = "^0.18.3"
pandas = "^2.2.1"
fastparquet = "^2024.2.0"
loguru = "^0.7.2"
openpyxl = "^3.1.2"
schedule = "^1.2.1"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
faker = "^24.14.0"
boto3 = "^1.34.93"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
